# Week1CMakeGitTest

./: .gitmodules  README.md
DarwinTest/: CMakeLists.txt  main  main.cpp
MozartTest/: CMakeLists.txt  main  main.cpp
